samples/_failures_safe/1761436932_b05ea3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99507f14.c: In function ‘main’:
./samples/SAFE/__tmp_99507f14.c:166:13: error: expected expression at end of input
  166 |             case
      |             ^~~~
./samples/SAFE/__tmp_99507f14.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99507f14.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99507f14.c:166:13: error: expected declaration or statement at end of input
